[package]
name = "Planner"
version = "0.1.0"
edition = "2021"
liscence = "GPL-3.0"
description = "A library managing the triggering of a function at scheduled dates."
documentation = "https://docs.rs/Planner"
authors = ["GhostOcter"]
repository = "https://github.com/GhostOcter/Planners"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_with = {version = "2.0.0", features = ["chrono_0_4"]}
serde_json = "1"
spin_sleep = "1"