[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
liscence = "GPL-3.0"
description = "A library managing the triggering of a function at scheduled dates."
documentation = "https://docs.rs/Scheduler"
authors = ["GhostOcter"]
repository = "https://github.com/GhostOcter/Scheduler"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4"}
serde = {version = "1", features = ["derive"], optional = true}
serde_with = {version = "2.0.0", features = ["chrono_0_4"], optional = true}
spin_sleep = {version = "1", optional = true}

[features] 
serde = ["dep:serde", "dep:serde_with", "chrono/serde"]
spin_sleep = ["dep:spin_sleep"]